unpackaged/main/default/objects/sfsp__SalesNodeAssignment__c/sfsp__SalesNodeAssignment__c.object-meta.xml
<CustomObject>
    <label>Sales Node Assignment</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Node Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>