unpackaged/main/default/objects/sfsp__SalesNodeAssignment__c/fields/sfsp__AssignmentType__c.field-meta.xml
<CustomField>
    <fullName>sfsp__AssignmentType__c</fullName>
    <label>Assignment Type</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>