unpackaged/main/default/objects/sfsp__SalesNodeAssignment__c/fields/sfsp__RecordId__c.field-meta.xml
<CustomField>
    <fullName>sfsp__RecordId__c</fullName>
    <label>Record Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>