unpackaged/main/default/objects/sfsp__SalesNodeAssignment__c/fields/sfsp__Status__c.field-meta.xml
<CustomField>
    <fullName>sfsp__Status__c</fullName>
    <label>Status</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>